# buho-stocks

./: .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  buho-stocks.code-workspace  pyproject.toml
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  django.yml  docker-build-publish-backend-latest.yml  docker-build-publish-backend-tag.yml  docker-build-publish-client-latest.yml  docker-build-publish-client-tag.yml  react.yml
backend/companies/tests/: test_data_calculators.py  test_data_calculators_closed.py  test_filters.py  test_utils.py
backend/exchange_rates/services/: yfinance_api_client.py
backend/exchange_rates/tests/services/: test_exchange_rate_service.py
backend/portfolios/tests/: test_data_calculators.py
backend/shares_transactions/tests/: test_transaction_calculator.py
backend/stats/tests/: test_company_stats_utils.py  test_portfolio_stats_utils.py
backend/stock_prices/services/: yfinance_api_client.py
backend/stock_prices/tests/: test_fetchers.py
backend/stock_prices/tests/mocks/: mock_yfinance.py
backend/stock_prices/tests/services/: test_stock_prices_service.py
client/: biome.json  package-lock.json  package.json  vite.config.mjs
docs/development/: run-project-locally.md
