[project]
name = "buho-stocks"
version = "1.0.5"
description = "Application to manage and track a stocks portfolio with dividends and return for a Buy & Hold investment strategy."
authors = [{ name = "Rene Fernandez", email = "renefernandez@duck.com" }]
license = { text = "GPL-3.0-or-later" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "celery>=5.3.4",
  "channels[daphne]>=4.0.0",
  "channels-redis>=4.1.0",
  "django>=5.1.5",
  "django-celery-results>=2.5.1",
  "django-cors-headers>=3.14.0",
  "django-filter>=22.1",
  "django-money>=3.4.1",
  "djangorestframework>=3.15.2",
  "djangorestframework-camel-case>=1.4.2",
  "drf-extra-fields>=3.4.1",
  "drf-yasg>=1.21.5",
  "dj-database-url>=2.1.0",
  "gunicorn>=22.0.0",
  "mysqlclient>=2.2.4",
  "pandas>=2.2.2",
  "pillow>=12.1.1",
  "python-decouple>=3.8",
  "redis>=5.0.1",
  "requests>=2.31.0",
  "requests-cache>=1.1.0",
  "sentry-sdk==2.54.0",
  "yfinance==0.2.54",
  "random-user-agent>=1.0.1",
  "requests-ratelimiter>=0.9.1",
]

[project.optional-dependencies]
dev = [
  "bandit>=1.7.4",
  "celery-stubs>=0.1.3",
  "coverage>=6.2",
  "django-stubs>=5.2.9",
  "djangorestframework-stubs[compatible-mypy]>=3.14.5",
  "django-filter-stubs>=0.1.3",
  "djlint>=1.34.1",
  "drf-yasg-stubs>=0.1.4",
  "factory-boy>=3.3.0",
  "faker>=22.2.0",
  "mypy>=1.7.1",
  "pre-commit>=4.5.1",
  "responses>=0.23.0",
  "ruff>=0.8.0",
  "types-requests==2.28.11.13",
  "types-redis>=4.6.0.11",
  "pytest-django>=4.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.ruff]
target-version = "py311"
line-length = 88
exclude = [
  ".git",
  ".mypy_cache",
  ".tox",
  ".venv",
  "venv",
  "_build",
  "buck-out",
  "build",
  "dist",
  "client",
  "docs",
  "data",
  "media",
  "migrations",
]

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # Pyflakes
  "I",  # isort
  "B",  # flake8-bugbear
  "C4", # flake8-comprehensions
  "DJ", # flake8-django
  "UP", # pyupgrade
]
ignore = [
  "E501", # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = [
  "buho_backend",
  "companies",
  "currencies",
  "dividends_transactions",
  "exchange_rates",
  "markets",
  "portfolios",
  "rights_transactions",
  "sectors",
  "settings",
  "shares_transactions",
  "stats",
  "stock_prices",
  "benchmarks",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "buho_backend.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
pythonpath = [".", "backend"]
